--- a/RPG Game/RPG Game.csproj
+++ b/RPG Game/RPG Game.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\Manager.cs" />
+    <Compile Include="src\GameManager.cs" />
     <Compile Include="src\Moves.cs" />
     <Compile Include="src\Pokemon.cs" />
     <Compile Include="src\PokemonManager.cs" />
